option(
  'strict_warnings',
  type: 'boolean',
  value: false,
  description: 'Enable strict warnings and treat all warnings as errors'
)

option(
  'check_unreachable_code',
  type: 'boolean',
  value: false,
  description: 'Enable compiler diagnostics for unreachable/unhittable code paths (when supported)'
)